# Competitive-Programming

./: .gitignore  antonOrDanik.cpp  beautifulYear.cpp  bfs.py  boyOrGirl.cpp  dominioPiling.cpp  elephant.cpp  fizzBuzz.cpp  helpfulMaths.cpp  input.txt  nearlyLuckyNumber.cpp  nextRound.cpp  petyaAndStrings.cpp  prueba.cpp  prueba.py  soldierAndBananas.cpp  stonesOnTheTable.cpp  tram.cpp  translation.cpp  watermelon.cpp  wayTooLongWords.cpp  word.cpp  wordCapitalization.cpp
1000/: chatRoom.cpp  luckyDivision.cpp  stringTask.cpp  theatreSquare.cpp
1200/: king'sTask.cpp  rudolfAndTheBallGame.cpp
166Div2/: B.cpp  C.cpp
1RA-DIV/: A.cpp  F.cpp  G.cpp  bijele.cpp  chartingProgress.cpp  eraseSecurely.cpp  islands.cpp  johnnyApplesack.cpp  joinStrings.cpp  kutevi.cpp  millionaireMadness.cpp
1RA-DIV/Accepted/: B.cpp  C.cpp  D.cpp
1RA-Div/: bijele.cpp  chartingProgress.cpp  eraseSecurely.cpp  islands.cpp  johnnyApplesack.cpp  joinStrings.cpp  kutevi.cpp  millionaireMadness.cpp
2DA-Div/: G.cpp  G2.cpp  coinChange.cpp
2DA-Div/Accepted/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
800/: beautifulMatrix.cpp  bit++.cpp  team.cpp  vaynaAndFence.cpp
900/: clockAndStrings.cpp  football.cpp  gravityFlip.cpp  kefaAndFirstSteps.cpp  metro.cpp  queueAtTheSchool.cpp  tempCodeRunnerFile.cpp  twins.cpp
AtCoder352/: B.cpp
CSES/IntroductoryProblems/: increasingArray.cpp  missingNumber.cpp  numberSpiral.cpp  permutations.cpp  repetitions.cpp  weirdAlgorithm.cpp
CSES/Mathematics/: exponentiationII.cpp  josephusQueries.cpp
Contest/Hello2025/: .autocp  CMakeLists.txt
Contest/Hello2025/Codeforces - Hello 2025/: A_MEX_Table.cpp  B_Gorilla_and_the_Exam.cpp  C_Trip_to_the_Olympiad.cpp  D_Gifts_Order.cpp  E1_Another_Exercise_on_Graphs_Easy_Version.cpp
DP/: fillingShapes.cpp  yetAnotherBrokenKeyboard.cpp
Div2/: A.cpp  F.cpp
Div4/: binaryCut.cpp
KotlinHeroes/: A.cpp
Nacional/: A.cpp  B.cpp  C.cpp  E.cpp  F.cpp  H.cpp  I.cpp  I.py  K.cpp  K2.cpp  L.cpp
Nacional2024/: .autocp  CMakeLists.txt
Nacional2024/Codeforces - 2024-2025 ICPC Brazil Subregional Programming Contest/: A_Attention_to_the_Meeting.cpp  B_Bacon_Number.cpp  E_Enigma_of_the_Jewelry_Case.cpp  F_Fractions_are_better_when_continued.cpp  G_Geography_of_Rivers.cpp  H_Harmonics_with_Interference.cpp  I_Ingredients_that_may_Harm_You.cpp  K_Karamell.cpp  L_Lecographically_Maximum.cpp
PreTrainingCamp/: ABB  ABB.cpp
RPC0518/: BethsCookies.cpp
Regional2024/: A.cpp  F.cpp  J.cpp  K.cpp  input.txt  output.txt
SanSiPlaysOffs/: A.cpp  B.cpp  C.cpp  D.cpp
Sansicup2023/: .autocp
Sansicup2024/: .autocp  CMakeLists.txt
Sansicup2024/Codeforces - SanSi Cup 2024/: A_Alalay.cpp  B_Back_to_the_Fruit_Forest.cpp  C_Christ_of_Discord.cpp  D_World_Domination.cpp  E_El_Gift_from_Ronaldo.cpp  F_Fiesta_in_the_Mountains.cpp  G_Global_warming.cpp
Theory/: Grafo Bipartito.md  Grafos.md  Ordenamiento Topologico.md  SegmentTree.md  UnionFind.md  maxFlow.md
aCodeDaily/: .gitignore  B_Lecture.cpp
(+537 files in other folders)
