cmake_minimum_required(VERSION 3.20)
project(Nacional2024)

set(CMAKE_CXX_STANDARD 17)

file(GLOB SOURCES "Codeforces - 2024-2025 ICPC Brazil Subregional Programming Contest/*.cpp")

add_executable(A_Attention_to_the_Meeting "Codeforces - 2024-2025 ICPC Brazil Subregional Programming Contest/A_Attention_to_the_Meeting.cpp")
add_executable(F_Fractions_are_better_when_continued "Codeforces - 2024-2025 ICPC Brazil Subregional Programming Contest/F_Fractions_are_better_when_continued.cpp")
add_executable(E_Enigma_of_the_Jewelry_Case "Codeforces - 2024-2025 ICPC Brazil Subregional Programming Contest/E_Enigma_of_the_Jewelry_Case.cpp")
add_executable(L_Lecographically_Maximum "Codeforces - 2024-2025 ICPC Brazil Subregional Programming Contest/L_Lecographically_Maximum.cpp")
add_executable(I_Ingredients_that_may_Harm_You "Codeforces - 2024-2025 ICPC Brazil Subregional Programming Contest/I_Ingredients_that_may_Harm_You.cpp")
add_executable(H_Harmonics_with_Interference "Codeforces - 2024-2025 ICPC Brazil Subregional Programming Contest/H_Harmonics_with_Interference.cpp")
add_executable(K_Karamell "Codeforces - 2024-2025 ICPC Brazil Subregional Programming Contest/K_Karamell.cpp")
add_executable(B_Bacon_Number "Codeforces - 2024-2025 ICPC Brazil Subregional Programming Contest/B_Bacon_Number.cpp")
add_executable(G_Geography_of_Rivers "Codeforces - 2024-2025 ICPC Brazil Subregional Programming Contest/G_Geography_of_Rivers.cpp")