cmake_minimum_required(VERSION 3.20)
project(Sansicup2024)

set(CMAKE_CXX_STANDARD 17)

file(GLOB SOURCES "Codeforces - SanSi Cup 2024/*.cpp")

add_executable(A_Alalay "Codeforces - SanSi Cup 2024/A_Alalay.cpp")
add_executable(B_Back_to_the_Fruit_Forest "Codeforces - SanSi Cup 2024/B_Back_to_the_Fruit_Forest.cpp")
add_executable(C_Christ_of_Discord "Codeforces - SanSi Cup 2024/C_Christ_of_Discord.cpp")
add_executable(D_World_Domination "Codeforces - SanSi Cup 2024/D_World_Domination.cpp")
add_executable(E_El_Gift_from_Ronaldo "Codeforces - SanSi Cup 2024/E_El_Gift_from_Ronaldo.cpp")
add_executable(F_Fiesta_in_the_Mountains "Codeforces - SanSi Cup 2024/F_Fiesta_in_the_Mountains.cpp")
add_executable(G_Global_warming "Codeforces - SanSi Cup 2024/G_Global_warming.cpp")